[gd_scene load_steps=22 format=3 uid="uid://dibqwc2agd7rr"]

[ext_resource type="Script" uid="uid://dw0nh1t3fi83d" path="res://Scripts/body.gd" id="1_8wq5q"]
[ext_resource type="PackedScene" uid="uid://dsc0dbeu865uh" path="res://Scenes/bloodtrail.tscn" id="3_lwtj6"]
[ext_resource type="Texture2D" uid="uid://46f08vw0j2gv" path="res://sprites/characters/ISO-Test-Player.png" id="3_q2pd1"]
[ext_resource type="Texture2D" uid="uid://dhrhmi5j3k3b2" path="res://sprites/characters/body/idle/idle_E.png" id="3_uwu1r"]
[ext_resource type="PackedScene" uid="uid://bej655obpoitl" path="res://Scenes/inventory_ui.tscn" id="4_80q7h"]
[ext_resource type="Texture2D" uid="uid://s6j5najcd1fj" path="res://sprites/characters/body/idle/idle_N.png" id="4_yxsct"]
[ext_resource type="Texture2D" uid="uid://c1s0akv43vk2u" path="res://sprites/characters/body/idle/idle_NE.png" id="5_b5fcs"]
[ext_resource type="PackedScene" uid="uid://c0kqjdkjmxm6i" path="res://Scenes/Stamina_bar.tscn" id="5_w6uka"]
[ext_resource type="Texture2D" uid="uid://diyih2t8cxchg" path="res://sprites/characters/body/idle/idle_NW.png" id="6_pilda"]
[ext_resource type="Texture2D" uid="uid://cfr1va8hm1p7p" path="res://sprites/characters/body/idle/idle_S.png" id="7_r3cyl"]
[ext_resource type="Texture2D" uid="uid://cgwhclo34vdgj" path="res://sprites/characters/body/idle/idle_SE.png" id="8_wf36i"]
[ext_resource type="Texture2D" uid="uid://ogx3n5bdmxub" path="res://sprites/characters/body/idle/idle_SW.png" id="9_47rig"]
[ext_resource type="Texture2D" uid="uid://dpi1lftxdcxh7" path="res://sprites/characters/body/idle/idle_W.png" id="10_yj7if"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8wq5q"]
radius = 81.615

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bkb0v"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
color = Color(0.580392, 0.0823529, 0.0823529, 1)

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uwu1r")
}],
"loop": true,
"name": &"idle_E",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_yxsct")
}],
"loop": true,
"name": &"idle_N",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_b5fcs")
}],
"loop": true,
"name": &"idle_NE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_pilda")
}],
"loop": true,
"name": &"idle_NW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_r3cyl")
}],
"loop": true,
"name": &"idle_S",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_wf36i")
}],
"loop": true,
"name": &"idle_SE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_47rig")
}],
"loop": true,
"name": &"idle_SW",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_yj7if")
}],
"loop": true,
"name": &"idle_W",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q2pd1")
}],
"loop": true,
"name": &"walkdown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q2pd1")
}],
"loop": true,
"name": &"walkleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q2pd1")
}],
"loop": true,
"name": &"walkright",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q2pd1")
}],
"loop": true,
"name": &"walkup",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwk4u"]
radius = 10.6854
height = 32.9832

[sub_resource type="FontFile" id="FontFile_qycxt"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xfolv"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AnimatedSprite2D:animation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("CollisionShape2D:disabled")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("bleeding:emitting")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:INFO")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:INTERACTABLES")
properties/5/spawn = true
properties/5/replication_mode = 0

[sub_resource type="Gradient" id="Gradient_bfnwt"]
offsets = PackedFloat32Array(0.707792, 0.987013, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 0.078125, 0.078125, 0.078125, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q2pd1"]
gradient = SubResource("Gradient_bfnwt")
use_hdr = true

[node name="Body" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
script = ExtResource("1_8wq5q")

[node name="Enemy_Detection_Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Detection_Range"]
visible = false
y_sort_enabled = true
shape = SubResource("CircleShape2D_8wq5q")

[node name="bleeding" parent="." instance=ExtResource("3_lwtj6")]
emitting = false
amount = 200
lifetime = 60.0
randomness = 1.0
trail_lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_bkb0v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0.5, 0)
scale = Vector2(0.984375, 1)
sprite_frames = SubResource("2")
animation = &"idle_S"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7.15256e-07, 24)
rotation = 1.31598
shape = SubResource("CapsuleShape2D_vwk4u")

[node name="PlayerCamera" type="Camera2D" parent="."]
enabled = false
zoom = Vector2(8, 8)

[node name="InventoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="InventoryUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 85.0
offset_top = 210.0
offset_right = -84.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.388235, 0.290196, 0.152941, 1)

[node name="Label" type="Label" parent="InventoryUI/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.5
offset_top = 25.0
offset_right = 26.5
offset_bottom = 55.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "INVENTAIRE"
vertical_alignment = 1

[node name="Inventory" parent="InventoryUI" instance=ExtResource("4_80q7h")]
offset_right = 0.0
offset_bottom = 0.0

[node name="InteractUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="InteractUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = 260.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.388235, 0.290196, 0.152941, 1)

[node name="Label" type="Label" parent="InteractUI/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = SubResource("FontFile_qycxt")
theme_override_font_sizes/font_size = 30
text = "E"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xfolv")

[node name="Stamina_UI" type="CanvasLayer" parent="."]

[node name="Stamina_bar" parent="Stamina_UI" instance=ExtResource("5_w6uka")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 424.0
offset_top = 276.0
offset_right = 488.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_vertical = 0

[node name="PointLight2D2" type="PointLight2D" parent="Stamina_UI"]
visible = false
y_sort_enabled = true
position = Vector2(20.4482, 30.209)
rotation = 0.959931
scale = Vector2(0.782428, 0.0978788)
color = Color(1, 1, 1, 0.588235)
range_z_max = 1023
texture = SubResource("GradientTexture2D_q2pd1")

[connection signal="body_entered" from="Enemy_Detection_Range" to="." method="_on_enemy_detection_range_body_entered"]
[connection signal="body_exited" from="Enemy_Detection_Range" to="." method="_on_enemy_detection_range_body_exited"]
